[routes] Add pokemon.ejs and render via pokemon.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <!-- submit buttons should POST pokemon clicked to favorite  -->
   
   <!-- at this point clicking add to favorites redirects us to /pokemon-->
-  <!-- with raw object data of {'name': 'bulbosaur'}-->
+  <!-- with raw object data of {'name': 'bulbosaur'} or whichever pokemon was clicked-->
   <% pokemon.forEach(pokemon => { %>
     <div class="well">
       <h2><%= pokemon.name %></h2>
