--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,1 +1,7 @@
 <h1><%= pokemon.name %></h1>
+<img src="<%= pokemon.sprites.front_default%>" alt="pokemon sprite">
+<img src="<%= pokemon.sprites.front_shiny %>" alt="pokemon sprite">
+<h4>Abilities</h4>
+<% for (let i = 0; i < pokemon.abilities.length; i++) { %>
+    <p><%=pokemon.abilities[i].ability.name%></p>
+<% } %>
