[css/links] Add styles and link hrefs in layout.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,8 +16,8 @@
           <img src="http://pixelartmaker.com/art/d98dde45d242734.png" alt="pokemon logo" width=150px >
         </a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="sass.html">Home</a></li>
-          <li><a href="badges.html">Components</a></li>
+          <li><a href="../">Home</a></li>
+          <li><a href="../pokemon">Favorites</a></li>
         </ul>
       </div>
     </nav>
