--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,7 +1,9 @@
-<h1><%= pokemon.name %></h1>
-<img src="<%= pokemon.sprites.front_default%>" alt="pokemon sprite">
-<img src="<%= pokemon.sprites.front_shiny %>" alt="pokemon sprite">
+<div id="view-pokemon">
+<h1 id="pokemon-name"><%= pokemon.name %></h1>
+<img src="<%= pokemon.sprites.front_default%>" alt="pokemon sprite" width="200" height="200" id="img">
 <h4>Abilities</h4>
 <% for (let i = 0; i < pokemon.abilities.length; i++) { %>
     <p><%=pokemon.abilities[i].ability.name%></p>
 <% } %>
+</div>
+<!-- cant use DOM in node. document is only browser side! -->
