--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,17 +1,19 @@
 <div id="view-pokemon">
 <h1 id="pokemon-name"><%= pokemon.name %></h1>
+<h6 class="show-heading" id="pokemon-type"><%= pokemon.types[0].type.name %> type</h6>
 <img src="<%= pokemon.sprites.front_default%>" alt="pokemon sprite" width="200" height="200" id="img">
-<h4>Abilities</h4>
+<h4 class="show-heading">Abilities</h4>
 <% for (let i = 0; i < pokemon.abilities.length; i++) { %>
-    <p><%=pokemon.abilities[i].ability.name%></p>
+    <p><%=pokemon.abilities[i].ability.name.toUpperCase()%></p>
 <% } %>
-<h4>Base Stats</h4>
+<h4 class="show-heading">Base Stats</h4>
 <% let stats = pokemon.stats[0] %>
-<p><strong><%= stats.stat.name.toUpperCase() %> :</strong>  <%= stats.base_stat %></p>
+<ul id="base-stats">
+<% pokemon.stats.forEach(s => { %>
+    <li><%= s.stat.name.toUpperCase() %>: <%= s.base_stat %></li>
+<% }) %>
+</ul>
 </div>
 
 <!-- base stat for loop -->
-<% pokemon.stats.forEach(s => { %>
-    <p><%= s.stat.name.toUpperCase() %>: <%= s.base_stat %></p>
-<% }) %>
 <!-- cant use DOM in node. document is only browser side! -->
