--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav>
-      <div class="nav-wrapper teal">
+      <div class="nav-wrapper blue darken-2">
         <a href="#" class="brand-logo right">
           <img src="http://pixelartmaker.com/art/d98dde45d242734.png" alt="pokemon logo" width=150px >
         </a>
