--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <div class="container">
-  <h1 class="text-center">The Original 151 Pokemon</h1>
+  <h1 class="text-center pokemon-font">The Original 151 Pokemon</h1>
   <p class="text-center">
-    <a href="/pokemon">Favorites</a>
   </p>
 
   <!-- for each rendered pokemon from index.js app.get home route -->
@@ -15,7 +14,7 @@
       <h2><%= pokemon.name %></h2>
       <form method="POST" action="/pokemon">
         <input hidden type="text" name="name" value="<%= pokemon.name %>">
-        <button class="btn btn-primary" type="submit">Add to Favorite Pokemon</button>
+        <button class="btn btn-primary blue darken-2" type="submit">Add to Favorite Pokemon</button>
       </form>
     </div>
   <% }); %>
