[delete] Remove defunct delte form on show

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,7 +12,7 @@
   <body>
     <nav>
       <div class="nav-wrapper blue darken-2">
-        <a href="#" class="brand-logo right">
+        <a href="../" class="brand-logo right">
           <img src="http://pixelartmaker.com/art/d98dde45d242734.png" alt="pokemon logo" width=150px >
         </a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
